[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Player/Hands.gd" type="Script" id=1]
[ext_resource path="res://Fonts/DynamicFonts/PlayerLabel.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Brain_Spritesheets/SpriteFrames/Brain_SpriteFrames.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Scripts/Player/PlayerController.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 38.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 8.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.5, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 22.5, 50 )

[node name="Brain" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = -57.0
margin_top = -80.0
margin_right = 57.0
margin_bottom = -52.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Player 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( 4, 18.75 )
shape = SubResource( 1 )

[node name="Animations" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Animations"]
position = Vector2( 20, -19 )
scale = Vector2( 0.345, 0.345 )
frames = ExtResource( 3 )
animation = "Damage"

[node name="Hands" type="Node2D" parent="Animations"]
script = ExtResource( 1 )
group = "P1_Brain_Hands"

[node name="Front" type="Area2D" parent="Animations/Hands"]
collision_layer = 0
collision_mask = 2

[node name="frontColl" type="CollisionShape2D" parent="Animations/Hands/Front" groups=["P1_Brain_Hands"]]
modulate = Color( 0.605469, 0.0567627, 0.0567627, 1 )
position = Vector2( 71, -23.5 )
shape = SubResource( 2 )

[node name="Up" type="Area2D" parent="Animations/Hands"]
collision_layer = 0
collision_mask = 2

[node name="upColl" type="CollisionShape2D" parent="Animations/Hands/Up" groups=["P1_Brain_Hands"]]
modulate = Color( 0.709804, 0.729412, 0.0666667, 1 )
position = Vector2( 11.5, -91 )
shape = SubResource( 3 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 4.5, 0 )
shape = SubResource( 4 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.375

[connection signal="body_entered" from="Animations/Hands/Front" to="Animations/Hands" method="_on_Front_body_entered"]
[connection signal="body_entered" from="Animations/Hands/Up" to="Animations/Hands" method="_on_Up_body_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
